# rede_de_pacotes

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
backend/: CMakeLists.txt  Computador.cpp  Computador.h  IDispositivo.h  InterfaceDoDispositivo.cpp  InterfaceDoDispositivo.h  Pacote.cpp  Pacote.h  Roteador.cpp  Roteador.h  Switch.cpp  Switch.h
